<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>


        <variable
            name="viewmodel"
            type="com.quere.presenation.viewmodel.BookmarkViewModel" />


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.bookmark.BookmarkFragment">


        <TextView
            android:id="@+id/textView_bookmark_deleteAll"
            android:text="@string/delete_all"
            style="@style/BookmarkTextStyle"
            android:onClick="@{() -> viewmodel.showDeleteAll()}"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView_bookmark_list"
            app:layout_constraintEnd_toStartOf="@+id/textView_bookmark_edit"
            app:layout_constraintHorizontal_bias="0.963"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/textView_bookmark_edit"
            android:text="@string/edit"
            style="@style/BookmarkTextStyle"

            android:onClick="@{() -> viewmodel.showEdit()}"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView_bookmark_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/textView_bookmark_submit"
            android:text="@string/finish_editithing"
            style="@style/BookmarkTextStyle"
            android:onClick="@{() -> viewmodel.showSubmit()}"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView_bookmark_list"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_bookmark_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/button_bookmark_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_bookmark"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_bookmark_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC1C1C1"
            android:text="@string/delete"
            android:onClick="@{() -> viewmodel.showDeleteSelected()}"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />


        <ImageView
            android:id="@+id/imageView_bookmark_emptyBookmark"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/img_bookmark"
            android:visibility="@{viewmodel.savedBookmarkList.size()==0 ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>