<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewmodel"
            type="com.quere.presenation.viewmodel.GenreViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#42000000"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/actionbar_tvGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout_tvGenre_stickbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_scrollFlags="noScroll">

                    <TextView
                        android:id="@+id/textView_tvGenre_homeActionBar"
                        style="@style/AppbarTextStyle"
                        android:onClick="@{() -> viewmodel.showHome()}"
                        android:text="@string/home_text" />

                    <TextView
                        android:id="@+id/textView_tvGenre_movieActionBar"
                        style="@style/AppbarTextStyle"
                        android:onClick="@{() -> viewmodel.showMovie()}"
                        android:text="@string/movie_text" />

                    <TextView
                        android:id="@+id/textView_tvGenre_tvActionBar"
                        style="@style/AppbarCurrentTextStyle"
                        android:text="@string/tv_text" />

                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView_tvGenre"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.TVshowFragment">


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager_tvGenre_popular"
                    style="@style/GenreViewPagerStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/viewPager_tvGenre_page"
                    style="@style/GenreViewPagerCounterStyle"
                    postionViewPager="@{viewmodel.pageTVViewPager}"
                    app:layout_constraintBottom_toTopOf="@+id/relativeLayout_tvGenre_indicator"
                    app:layout_constraintEnd_toEndOf="@+id/viewPager_tvGenre_popular" />

                <RelativeLayout
                    android:id="@+id/relativeLayout_tvGenre_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewPager_tvGenre_popular">


                </RelativeLayout>


                <TextView
                    android:id="@+id/textView_tvGenre_fantasy"
                    style="@style/GenreTextViewStyle"
                    android:text="#판타지"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout_tvGenre_indicator"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/textView_tvGenre_fantasyAll"
                    style="@style/GenreAllTextStyle"
                    android:onClick="@{() -> viewmodel.showFantasy()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_tvGenre_fantasy"
                    app:layout_constraintEnd_toEndOf="@+id/textView_tvGenre_fantasy"
                    app:layout_constraintHorizontal_bias="0.952"
                    app:layout_constraintStart_toStartOf="@+id/textView_tvGenre_fantasy"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout_tvGenre_indicator"
                    app:layout_constraintVertical_bias="0.677" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_tvGenre_fantasy"
                    style="@style/GenreRecyclerViewStyle"
                    tools:ignore="MissingConstraints"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/textView_tvGenre_fantasy"
                    tools:listitem="@layout/item_genre"
                    />


                <TextView
                    android:id="@+id/textView_tvGenre_animation"

                    style="@style/GenreTextViewStyle"
                    android:text="#애니메이션"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_tvGenre_fantasy"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView_tvGenre_animationAll"
                    style="@style/GenreAllTextStyle"
                    android:onClick="@{() -> viewmodel.showAnimation()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_tvGenre_animation"
                    app:layout_constraintEnd_toEndOf="@+id/textView_tvGenre_animation"
                    app:layout_constraintHorizontal_bias="0.952"
                    app:layout_constraintStart_toStartOf="@+id/textView_tvGenre_animation"
                    app:layout_constraintVertical_bias="0.677" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_tvGenre_animation"
                    style="@style/GenreRecyclerViewStyle"
                    tools:ignore="MissingConstraints"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/textView_tvGenre_animation"
                    tools:listitem="@layout/item_genre" />

                <TextView
                    android:id="@+id/textView_tvGenre_music"
                    style="@style/GenreTextViewStyle"
                    android:text="#뮤직"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_tvGenre_animation"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView_tvGenre_musicAll"
                    style="@style/GenreAllTextStyle"
                    android:onClick="@{() -> viewmodel.showMusic()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_tvGenre_music"
                    app:layout_constraintEnd_toEndOf="@+id/textView_tvGenre_music"
                    app:layout_constraintHorizontal_bias="0.952"
                    app:layout_constraintStart_toStartOf="@+id/textView_tvGenre_music"
                    app:layout_constraintVertical_bias="0.677" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_tvGenre_music"
                    style="@style/GenreRecyclerViewStyle"
                    tools:ignore="MissingConstraints"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/textView_tvGenre_music"
                    tools:listitem="@layout/item_genre" />

                <TextView
                    android:id="@+id/textView_tvGenre_comedy"

                    style="@style/GenreTextViewStyle"
                    android:text="#코미디"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_tvGenre_music"
                    tools:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/textView_tvGenre_comedyAll"
                    style="@style/GenreAllTextStyle"
                    android:onClick="@{() -> viewmodel.showComedy()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_tvGenre_comedy"
                    app:layout_constraintEnd_toEndOf="@+id/textView_tvGenre_comedy"
                    app:layout_constraintHorizontal_bias="0.952"
                    app:layout_constraintStart_toStartOf="@+id/textView_tvGenre_comedy"
                    app:layout_constraintVertical_bias="0.677" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_tvGenre_comedy"
                    style="@style/GenreRecyclerViewStyle"
                    tools:ignore="MissingConstraints"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/textView_tvGenre_comedy"
                    tools:listitem="@layout/item_genre" />

                <TextView
                    android:id="@+id/textView_tvGenre_romance"
                    style="@style/GenreTextViewStyle"
                    android:text="#로맨스"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_tvGenre_comedy"
                    tools:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/textView_tvGenre_romanceAll"
                    style="@style/GenreAllTextStyle"
                    android:onClick="@{() -> viewmodel.showRomancee()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_tvGenre_romance"
                    app:layout_constraintEnd_toEndOf="@+id/textView_tvGenre_romance"
                    app:layout_constraintHorizontal_bias="0.952"
                    app:layout_constraintStart_toStartOf="@+id/textView_tvGenre_romance"
                    app:layout_constraintVertical_bias="0.677" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_tvGenre_romance"
                    style="@style/GenreRecyclerViewStyle"
                    tools:ignore="MissingConstraints"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/textView_tvGenre_romanceAll"
                    tools:listitem="@layout/item_genre" />

                <TextView
                    android:id="@+id/textView_tvGenre_crime"

                    style="@style/GenreTextViewStyle"
                    android:text="#범죄"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_tvGenre_romance"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView_tvGenre_crimeAll"
                    style="@style/GenreAllTextStyle"
                    android:onClick="@{() -> viewmodel.showCrime()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_tvGenre_crime"
                    app:layout_constraintEnd_toEndOf="@+id/textView_tvGenre_crime"
                    app:layout_constraintHorizontal_bias="0.952"
                    app:layout_constraintStart_toStartOf="@+id/textView_tvGenre_crime"
                    app:layout_constraintVertical_bias="0.677" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_tvGenre_crime"
                    style="@style/GenreRecyclerViewStyle"
                    tools:ignore="MissingConstraints"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/textView_tvGenre_crime"
                    tools:listitem="@layout/item_genre" />

                <TextView
                    android:id="@+id/textView_tvGenre_mystery"

                    style="@style/GenreTextViewStyle"
                    android:text="#미스테리"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_tvGenre_crime"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView_tvGenre_mysteryAll"
                    style="@style/GenreAllTextStyle"
                    android:onClick="@{() -> viewmodel.showMystery()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_tvGenre_mystery"
                    app:layout_constraintEnd_toEndOf="@+id/textView_tvGenre_mystery"
                    app:layout_constraintHorizontal_bias="0.952"
                    app:layout_constraintStart_toStartOf="@+id/textView_tvGenre_mystery"
                    app:layout_constraintVertical_bias="0.677" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_tvGenre_mystery"
                    style="@style/GenreRecyclerViewStyle"
                    tools:ignore="MissingConstraints"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/textView_tvGenre_mystery"
                    tools:listitem="@layout/item_genre" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/stl_tvGenre"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/item_genre_shimmer" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>